# lokalizebypass

./: .gitignore  README.md  SETUP.md  pyproject.toml
.cursor/: index.mdc
.cursor/rules/: 01-architecture.mdc  02-data-model.mdc  03-llm-contracts.mdc  04-validation.mdc  05-dev-guidelines.mdc
.specify/memory/: constitution.md
docs/: api-key-management.md  claude-batch-processing.md  feature-plan.md  phases_checklist.md  runbook.md  simplification-analysis.md  verification-guide.md
example/: context-example.txt
example/set1/: en.json  fr.json
i18n/: de.json  en.json  sv.json
src/: __init__.py  cli.py  io_json.py  memory.py  merge.py  report.py  run_logging.py  select.py  translate.py
src/prompts/: __init__.py  repair.py  translate.py
src/providers/: api.py  base.py  claude.py  ollama.py  openai.py  openrouter.py  utils.py
src/validate/: placeholders.py  schema.py
tests/: __init__.py  test_build_memory.py  test_claude_provider.py  test_merge.py  test_missing_detection.py  test_openai_provider.py  test_openrouter_provider.py  test_placeholder_signature.py  test_schema_validation.py
