[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lokalizebypass"
version = "0.1.0"
description = "i18n LLM Translator (file-only)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
build-memory = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

